forth/test/fail/test_const_fold_rhs_udiv_zero.af
use' ../../lang.af
fun: test_const_fold_rhs_udiv_zero { val -- out } val 0 u/ end
